--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="page">
     <header class="header">
-      <a class="logo logo_place_header" href="https://practicum.yandex.ru/" target="blanc">
+      <a class="logo logo_place_header" href="https://practicum.yandex.ru/" target="_blank">
         <img src="images/logo_place_header.svg" alt="Яндекс Практикум">
       </a>
       <h1 class="header__title">Научиться учиться</h1>
@@ -22,35 +22,38 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <!-- тут валидатор выдает ворнинг, что отсутсвует заголовок в секции,
+        знаю что в таких моментах часто используют "visually-hidden", применяется ли такая практика в Яндекс,
+        и если нет то как быть с ворнингом? -->
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">
-              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
               но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-              <span class="two-columns__span-accent">
-              <strong class="two-columns__strong">Вывод:</strong>
-                учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-              </span>
-              Конкретные техники и упражнения помогают изменить подход к обучению,
+            </p>
+            <p class="two-columns__paragraph">
+              <span class="two-columns__span-accent">Вывод:</span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
-            <li class="table__cell">
+          <li class="table__cell">
             <h3 class="table__title">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
             <h3 class="table__title">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <span class="table__text">Всемирный Банк, 2017</span>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
             <li class="table__cell">
             <h3 class="table__title">1000 терабайт</h3>
@@ -63,7 +66,7 @@
           <li class="table__cell">
             <h3 class="table__title">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <span class="table__text">Всемирный Банк, 2017</span>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
             <h3 class="table__title">17–20 лет</h3>
@@ -129,42 +132,48 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman-triangle"></div>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
-          <a class="logo logo_place_footer" href="https://practicum.yandex.ru/" target="blanc">
+        <div class="footer__column footer__column_content_copyright">
+          <a class="logo logo_place_footer" href="https://practicum.yandex.ru/" target="_blank">
             <img src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
           </a>
           <p class="footer__autor">&copy;2021. Гирев Максим</p>
         </div>
-        <div class="footer__column_content_info">
-          <h3 class="footer__column-heading">О Практикуме</h3>
+        <nav class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
             <li class="footer__column-content">
-              <a class="footer__column-link" href="https://practicum.yandex.ru/" target="blanc">Главная</a>
+              <a class="footer__column-link" href="https://practicum.yandex.ru/" target="_blank">Главная</a>
             </li>
             <li class="footer__column-content">
-              <a class="footer__column-link" href="https://thecode.media/" target="blanc">Концепция</a>
+              <a class="footer__column-link" href="https://thecode.media/" target="_blank">Концепция</a>
             </li>
             <li class="footer__column-content">
-              <a class="footer__column-link" href="https://practicum.yandex.ru/it-mentor/" target="blanc">Наставники</a>
+              <a class="footer__column-link" href="https://practicum.yandex.ru/it-mentor/" target="_blank">Наставники</a>
             </li>
           </ul>
-        </div>
-        <div class="footer__column_content_social">
-        <h3 class="footer__column-heading">Соцсети</h3>
+        </nav>
+        <div class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
             <li class="footer__column-content">
-              <a class="footer__column-link footer__social-icon footer__social-icon_type_fb" href="https://www.facebook.com/yandex.practicum" target="blanc">Facebook</a>
+              <a class="footer__column-link" href="https://www.facebook.com/yandex.practicum" target="_blank">
+                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook
+              </a>
             </li>
             <li class="footer__column-content">
-              <a class="footer__column-link footer__social-icon footer__social-icon_type_vk" href="https://vk.com/yandex.practicum" target="blanc">ВКонтакте</a>
+              <a class="footer__column-link" href="https://vk.com/yandex.practicum" target="_blank">
+                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте
+              </a>
             </li>
             <li class="footer__column-content">
-              <a class="footer__column-link footer__social-icon footer__social-icon_type_inst" href="https://www.instagram.com/yndx.practicum" target="blanc">Instagram</a>
+              <a class="footer__column-link" href="https://www.instagram.com/yndx.practicum" target="_blank">
+                <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram
+              </a>
             </li>
           </ul>
         </div>
