--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div class="page">
@@ -18,13 +17,10 @@
         <a class="header__link" href="#">Узнать</a>
       </p>
       <img class="header__main-illustration" src="images/header-image.png" alt="фрагмент картины - Опять двойка, Ф. Решетникова">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation__play-animation"></div>
     </header>
     <main class="content">
       <section class="description">
-        <!-- тут валидатор выдает ворнинг, что отсутсвует заголовок в секции,
-        знаю что в таких моментах часто используют "visually-hidden", применяется ли такая практика в Яндекс,
-        и если нет то как быть с ворнингом? -->
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
@@ -42,9 +38,67 @@
           </div>
         </article>
       </section>
+      <section class="techniques">
+        <h2 class="section__title">Техники обучения</h2>
+        <p class="section__subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-attention.png" alt="иллюстрация карточки. фотография книги">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-recall.png" alt="иллюстрация карточки. фотография статуи">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-interliving.png" alt="иллюстрация карточки. фотография моста в перспективе">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-question.png" alt="иллюстрация карточки. фотография человека в пустом помещении">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-competence.png" alt="иллюстрация карточки. фотография стопки книг">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section__title">Видео нa TED</h2>
+        <p class="section__subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. 
+              Она считала себя законченным гуманитарием, причём далеко не самым умным. 
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно, 
+              что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. 
+              И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», 
+              ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </article>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link" href="#">Подробнее</a>
+      </section>
       <section class="digits">
-        <h2 class="section-title">Цифры и факты</h2>
-        <p class="section-subtitle">Про учёбу и мозг</p>
+        <h2 class="section__title">Цифры и факты</h2>
+        <p class="section__subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h3 class="table__title">86 миллиардов</h3>
@@ -81,15 +135,27 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
-        </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#">Подробнее</a>
+      </section>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют 
+            процесс обучения миллионов студентов по всему миру. Книгу 
+            «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так 
+            учащиеся повсюду смогут получить навыки и знания, которые приносят 
+            успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="иллюстрация книги Сальман Хан - Весь мир — школа">
+            <a class="khan__buy-link" href="#">Купить книгу</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h2 class="section__title section__title_theme_dark">Принципы обучения</h2>
+        <p class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__title">1</h3>
@@ -132,7 +198,25 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation__play-animation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section__title">Полезные ресурсы</h2>
+        <p class="section__subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a class="resources__logo" href="https://arzamas.academy/" target="_blank">
+            <img class="resources__logo-image" src="images/logo/resources-arzamas.svg" alt="логотип журнала Арзамас">
+          </a>
+          <a class="resources__logo" href="https://nplus1.ru/" target="_blank">
+            <img class="resources__logo-image" src="images/logo/resources-n1.svg" alt="логотип портала N+1">
+          </a>
+          <a class="resources__logo" href="https://strelka.com/ru/" target="_blank">
+            <img class="resources__logo-image" src="images/logo/resources-strelka.svg" alt="логотип института Стрелка">
+          </a>
+          <a class="resources__logo" href="https://polka.academy/" target="_blank">
+            <img class="resources__logo-image" src="images/logo/resources-polka.svg" alt="логотип образовательного проекта Полка">
+          </a>
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -141,7 +225,7 @@
           <a class="logo logo_place_footer" href="https://practicum.yandex.ru/" target="_blank">
             <img src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
           </a>
-          <p class="footer__autor">&copy;2021. Гирев Максим</p>
+          <p class="footer__author">&copy;2021. Гирев Максим</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
