correct bem block naming

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="header__link" href="#">Узнать</a>
       </p>
       <img class="header__main-illustration" src="images/header-image.png" alt="фрагмент картины - Опять двойка, Ф. Решетникова">
-      <div class="header__square-pic rotation__play-animation"></div>
+      <div class="header__square-pic rotation_play_animation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -39,8 +39,8 @@
         </article>
       </section>
       <section class="techniques">
-        <h2 class="section__title">Техники обучения</h2>
-        <p class="section__subtitle">Пять практик от Барбары Оакли</p>
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="иллюстрация карточки. фотография книги">
@@ -70,8 +70,8 @@
         </ul>
       </section>
       <section class="video">
-        <h2 class="section__title">Видео нa TED</h2>
-        <p class="section__subtitle">Для тех, кто любит прокрастинировать</p>
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -97,8 +97,8 @@
         <a class="feynman__link" href="#">Подробнее</a>
       </section>
       <section class="digits">
-        <h2 class="section__title">Цифры и факты</h2>
-        <p class="section__subtitle">Про учёбу и мозг</p>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h3 class="table__title">86 миллиардов</h3>
@@ -128,7 +128,7 @@
           </li>
           <li class="table__cell">
             <h3 class="table__title">1885 год</h3>
-            <p class="able__cell-text">Открытие кривой забывания</p>
+            <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
             <h3 class="table__title">1889 год</h3>
@@ -154,8 +154,8 @@
         </div>
       </section>
       <section class="kaufman">
-        <h2 class="section__title section__title_theme_dark">Принципы обучения</h2>
-        <p class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__title">1</h3>
@@ -198,11 +198,11 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle rotation__play-animation"></div>
+        <div class="kaufman__triangle rotation_play_animation"></div>
       </section>
       <section class="resources">
-        <h2 class="section__title">Полезные ресурсы</h2>
-        <p class="section__subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
           <a class="resources__logo" href="https://arzamas.academy/" target="_blank">
             <img class="resources__logo-image" src="images/logo/resources-arzamas.svg" alt="логотип журнала Арзамас">
