correct bem class names

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="header__link" href="#">Узнать</a>
       </p>
       <img class="header__main-illustration" src="images/header-image.png" alt="фрагмент картины - Опять двойка, Ф. Решетникова">
-      <div class="header__square-pic rotation_play_animation"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -198,7 +198,7 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle rotation_play_animation"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
