--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
 <div class="page">
@@ -140,16 +140,16 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют 
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют 
             процесс обучения миллионов студентов по всему миру. Книгу 
             «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так 
             учащиеся повсюду смогут получить навыки и знания, которые приносят 
-            успех в школе, карьере и жизни.</p>
+            успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="images/khan-book.jpg" alt="иллюстрация книги Сальман Хан - Весь мир — школа">
-            <a class="khan__buy-link" href="#">Купить книгу</a>
+            <a class="khan__buy-link" href="#" target="_blank">Купить книгу</a>
           </div>
         </div>
       </section>
@@ -203,20 +203,28 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <a class="resources__logo" href="https://arzamas.academy/" target="_blank">
-            <img class="resources__logo-image" src="images/logo/resources-arzamas.svg" alt="логотип журнала Арзамас">
-          </a>
-          <a class="resources__logo" href="https://nplus1.ru/" target="_blank">
-            <img class="resources__logo-image" src="images/logo/resources-n1.svg" alt="логотип портала N+1">
-          </a>
-          <a class="resources__logo" href="https://strelka.com/ru/" target="_blank">
-            <img class="resources__logo-image" src="images/logo/resources-strelka.svg" alt="логотип института Стрелка">
-          </a>
-          <a class="resources__logo" href="https://polka.academy/" target="_blank">
-            <img class="resources__logo-image" src="images/logo/resources-polka.svg" alt="логотип образовательного проекта Полка">
-          </a>
-        </div>
+        <ul class="resources__logo-zone">
+          <li>
+            <a class="resources__logo" href="https://arzamas.academy/" target="_blank">
+              <img class="resources__logo-image" src="images/logo/resources-arzamas.svg" alt="логотип журнала Арзамас">
+            </a>
+          </li>
+          <li>
+            <a class="resources__logo" href="https://nplus1.ru/" target="_blank">
+              <img class="resources__logo-image" src="images/logo/resources-n1.svg" alt="логотип портала N+1">
+            </a>
+          </li>
+          <li>
+            <a class="resources__logo" href="https://strelka.com/ru/" target="_blank">
+              <img class="resources__logo-image" src="images/logo/resources-strelka.svg" alt="логотип института Стрелка">
+            </a>
+          </li>
+          <li>
+            <a class="resources__logo" href="https://polka.academy/" target="_blank">
+              <img class="resources__logo-image" src="images/logo/resources-polka.svg" alt="логотип образовательного проекта Полка">
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
